UPDATE: Added Framer Motion, resolved issue with responsive & Scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,9 @@
 
+body {
+  overflow: overlay;
+}
 
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
